# LevelUP

./: README.md
Lesson10_ Video filters/: Readme.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson10_Drawing/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson12_InRangeVideo/: mainwindow.cpp  mainwindow.h
Lesson12_detect/: CMakeLists.txt  main.cpp
Lesson13_InRangeVideo/: mainwindow.ui
Lesson13_Perspective/: CMakeLists.txt  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui
Lesson14_ApproxLine/: CMakeLists.txt  CMakeLists.txt.user.bbc5bb7  mainwindow.cpp  mainwindow.h
Lesson15_face_detecting/: CMakeLists.txt  main.cpp
Lesson2/: main.cpp
Lesson4/: Lesson4.pro  filework.cpp  filework.h  main.cpp
Lesson5/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson6/: CMakeLists.txt
Lesson7/: CMakeLists.txt  main.cpp  Новый текстовый документ.txt
Lesson9/: mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.txt
